<resources>
    <string name="app_name">nativeAndroidApplicationAdvance</string>
    <string name="titleApp">Cinema films</string>
    <string name="introduction">Welcome to our App</string>
    <string name="AddText">Add new film seen</string>
    <string name="ShowText">See the films you\'ve seen</string>
    <string name="ShowDetailsFilms">To see more information about any of the films in the list, click on the film\'s title, image or viewing date.</string>
    <string name="Poster">Poster Image</string>
    <string name="TitleFilm">Title film</string>
    <string name="YearFilm">Year production</string>
    <string name="DurationFilm">Duration</string>
    <string name="GenresFilm">Genres</string>
    <string name="MainActorFilm">Main actor</string>
    <string name="OtherActorsFilm">Other actors</string>
    <string name="DirectorFilm">Director</string>
    <string name="countryMadeFilm">Original country</string>
    <string name="originalLanguageFilm">Official languages</string>
    <string name="languageSeenFilm">Language in which it was seen</string>
    <string name="citySeenFilm">City in which it was seen</string>
    <string name="countrySeenFilm">Country in which it was seen</string>
    <string name="dateSeenFilm">Date in which it was seen</string>
    <string name="SearchFilmInsert">Search the film you want to insert</string>
    <string name="SearchFilm">Search film</string>
    <string name="SelectInsertFilmText">Select a film to be inserted</string>
    <string name="InsertDataRelatedDateFilmSeen">Insert data related to the date seen the film</string>
    <string name="DataRelatedFilmSeen">Data related from film seen</string>
    <string name="SpecificDataFilmSeen">Details from film</string>
    <string name="previousPage">Previous page</string>
    <string name="nextPage">Next page</string>
    <string name="addFilm">Add film</string>
    <string name="totalResults">Total results:</string>
    <string name="AlertErrorSendInsert">Error adding the film seen</string>
    <string name="MessageErrorSendInsert">Error adding the film seen. Please, try it again later.</string>
    <string name="AlertNoRequiredData">Required data not available</string>
    <string name="MessageNoRequiredData">Some of the required data have not been establish. Please introduce the data from the language, the date, the city and the country in which it was seen the film.</string>
    <string name="ModifyDataFilm">Modify data</string>
    <string name="DeleteDataFilm">Delete data</string>
    <string name="Seen">"Seen date: "</string>
</resources>