<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectInsertFilmActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Título de la actividad -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SearchFilmInsert"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">
            <!-- Campo de introducción de nombre de película -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TitleFilm"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="start"/>
                <EditText
                    android:id="@+id/titleFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:textSize="22sp"
                    android:background="@drawable/rounded_rectangle_white"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:inputType="text" />
            </LinearLayout>
            <!-- Botón para realizar la búsqueda de la película -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/insertNewSubjectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_rectangle_green"
                    android:text="@string/SearchFilm">
                </Button>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SelectInsertFilmText"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="start"/>
        </LinearLayout>
        <!-- Tabla dinámica -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/tableFilms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>