<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Sección del título de la actividad -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <!-- Título de la actividad -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShowText"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>
        <!-- Sección del botón para acceder a la sección para poder
            insertar una nueva película vista en el cine -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">
            <!-- Botón para acceder a la sección para poder
                insertar una nueva película vista en el cine -->
            <Button
                android:id="@+id/addNewFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/rounded_rectangle_green"
                android:text="@string/AddText">
            </Button>
        </LinearLayout>
        <!-- Sección para informar al usuario como obtener más
             información de una película -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <!-- Texto para informar al usuario como obtener más
                 información de una película -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShowDetailsFilms"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="start"/>
        </LinearLayout>
        <!-- Sección donde se encuentra la tabla para mostrar las
             películas vistas por el usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Tabla para mostrar las películas vistas por el usuario -->
                <TableLayout
                    android:id="@+id/tableFilms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>